// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with errors 1`] = `
<fieldset
  className="MuiFormControl-root-1"
  id="abc-fieldset"
>
  <div>
    <div
      component={[Function]}
      error={true}
      id="abc"
      inputProps={Object {}}
      name="abc"
      onChange={[Function]}
    >
      Field
    </div>
    <p
      className="MuiFormHelperText-root-23 MuiFormHelperText-error-24"
    >
      Y
    </p>
  </div>
  <div>
    <label
      className="MuiFormLabel-root-16 MuiFormLabel-error-19 MuiInputLabel-error-8 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
      data-shrink={false}
      htmlFor="abc"
    />
    <div
      component={[Function]}
      error={true}
      id="abc"
      inputProps={Object {}}
      name="abc"
      onChange={[Function]}
    >
      Field
    </div>
    <p
      className="MuiFormHelperText-root-23 MuiFormHelperText-error-24"
    >
      Y
    </p>
  </div>
</fieldset>
`;

exports[`renders correctly without errors 1`] = `
<fieldset
  className="MuiFormControl-root-1"
  id="undefined-fieldset"
>
  <div>
    <div
      component={[Function]}
      error={false}
      inputProps={Object {}}
      onChange={[Function]}
    >
      Field
    </div>
  </div>
  <div>
    <label
      className="MuiFormLabel-root-16 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
      data-shrink={false}
    />
    <div
      component={[Function]}
      error={false}
      inputProps={Object {}}
      onChange={[Function]}
    >
      Field
    </div>
    <p
      className="MuiFormHelperText-root-23"
    />
  </div>
</fieldset>
`;
